feat: add audio tag to posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,10 @@ layout: default
   </header>
 
   <div class="post-content" itemprop="articleBody">
+    <audio src="{{ page.mp3 }}" controls="controls">
+      Your browser does not support the <code>audio</code> element.
+    </audio>
+
     {{ content }}
   </div>
 
