style: add working layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="btc-red bw-0 bs-s ff-normal" style="border-top-width: 8px" >
 
     {% include header.html %}
 
