layout: just hide all the references to feeds and social media

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,10 @@
 
   <div class="wrapper">
 
+    <!-- // comment out footer for now
+
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+
     <h2 class="footer-heading">{{ site.title }}</h2>
 
     <div class="footer-col-wrapper">
@@ -32,6 +36,10 @@
         <p>{{ site.description }}</p>
       </div>
     </div>
+
+    // uncomment footer when we got the goods -->
+
+    <p class="p-1 c-l.8">&copy; 2015 Jeremy Ricketts and Micheal Chan. All rights reserved.</p>
 
   </div>
 
