fix: add trailing slash to "All Episodes" button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
   </div>
 
   <div class="ta-c">
-    <a href="{{ site.baseurl }}" class="bs-s bw-1p bc-red bs-3p p-1 c-red mb-1 d-ib">All Episodes</a>
+    <a href="{{ site.baseurl }}/" class="bs-s bw-1p bc-red bs-3p p-1 c-red mb-1 d-ib">All Episodes</a>
   </div>
 
 </article>
