--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,12 @@
 <header class="ta-c pb-2" style="padding-top: 60px;">
   <img src="/BCR.png" alt="Bird Call Review Logo" style="border-radius: 3px; width: 100px" class="mb-2" />
   <h1 class="ff-bold" >Bird Call Review</h1>
+
+  <div style="margin: 2em 0 1em" class="px_.5">
+    <a class="c-red" href="itpc://birdcallreview.com/feed.xml">iTunes</a>
+    <a class="c-red" href="overcast://x-callback-url/add?url=birdcallreview.com/feed.xml">Overcast</a>
+    <a class="c-red" href="podcast://birdcallreview.com/feed.xml">Podcasts.app</a>
+    <a class="c-red" href="downcast://birdcallreview.com/feed.xml">Downcast</a>
+    <a class="c-red" href="http://birdcallreview.com/feed.xml">RSS</a>
+  </div>
 </header>
