--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -289,6 +289,7 @@ html {
 .m-0 { margin: 0 }
 .bs-3p { border-radius: 3px }
 .d-ib { display: inline-block }
+.px_\.5 > * { padding-left: .5em; padding-right: .5em }
 
 .fs-24p { font-size: 24px }
 
