lots of changes and shit.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="wrapper ta-c">
 
     <!-- // comment out footer for now
 
@@ -33,7 +33,8 @@
 
     // uncomment footer when we got the goods -->
 
-    <p class="p-1 c-l.8">&copy; 2015 Jeremy Ricketts and Micheal Chan. All rights reserved.</p>
+    <p class="p-0">{% include icon-twitter.html username=site.twitter_username %} - <a href="/credits" class="c-red">credits</a></p>
+    <p class="c-l.8 p-0">&copy; 2016 Jeremy Ricketts &amp; Micheal Chan. All rights reserved.</p>
 
   </div>
 
