--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,15 @@
 <header class="ta-c pb-2" style="padding-top: 60px;">
-  <img src="/BCR.png" alt="Bird Call Review Logo" style="border-radius: 3px; width: 100px" class="mb-2" />
-  <h1 class="ff-bold" >Bird Call Review</h1>
 
-  <div style="margin: 2em 0 1em" class="px_.5">
-    <a class="c-red" href="itpc://birdcallreview.com/feed.xml">iTunes</a>
-    <a class="c-red" href="overcast://x-callback-url/add?url=birdcallreview.com/feed.xml">Overcast</a>
-    <a class="c-red" href="podcast://birdcallreview.com/feed.xml">Podcasts.app</a>
-    <a class="c-red" href="downcast://birdcallreview.com/feed.xml">Downcast</a>
-    <a class="c-red" href="http://birdcallreview.com/feed.xml">RSS</a>
+  <h1 class="ff-normal site-title">Bird Call <span class="c-grey">Review</span></h1>
+
+  <img src="/img/birds.png" alt="Birds on Branch" style="width: 400px" class="mt-2" />
+
+  <div style="margin: 0 1em; line-height: 3em;" class="px_1 py_.5 mx_.5">
+    <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="https://itunes.apple.com/us/podcast/bird-call-review/id1084057771?mt=2">iTunes</a>
+    <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="overcast://x-callback-url/add?url=birdcallreview.com/feed.xml">Overcast</a>
+    <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="downcast://birdcallreview.com/feed.xml">Downcast</a>
+    <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="podcast://birdcallreview.com/feed.xml">Podcasts.app</a>
+    <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="http://birdcallreview.com/feed.xml">RSS</a>
   </div>
+
 </header>
