--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
       <h2 class="post-title c-red ff-bold fs-24p" style="letter-spacing: 0" itemprop="name headline">{{ page.title }}</h2>
     </header>
 
-    <div class="post-content" itemprop="articleBody">
+    <div class="post-content ff-sans" itemprop="articleBody">
       {{ content }}
 
       <audio src="{{ page.mp3 }}" controls="controls" class="w-100%">
