--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,1 +1,1 @@
-<a href="https://twitter.com/{{ include.username }}"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span><span class="username">{{ include.username }}</span></a>
+<span class="icon icon--twitter">{% include icon-twitter.svg %}</span><a href="https://twitter.com/{{ include.username }}" class="c-red"><span class="username">@{{ include.username }}</span></a>
