--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
     <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="https://itunes.apple.com/us/podcast/bird-call-review/id1084057771?mt=2">iTunes</a>
     <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="overcast://x-callback-url/add?url=birdcallreview.com/feed.xml">Overcast</a>
     <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="downcast://birdcallreview.com/feed.xml">Downcast</a>
-    <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="podcast://birdcallreview.com/feed.xml">Podcasts.app</a>
+    <!-- <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="podcast://birdcallreview.com/feed.xml">Podcasts.app</a> -->
     <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="http://birdcallreview.com/feed.xml">RSS</a>
   </div>
 
