The simulator was a liar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
   <img src="/img/birds.png" alt="Birds on Branch" style="width: 400px" class="mt-2" />
 
-  <div style="margin: 0 1em; line-height: 3em;" class="px_.75 py_.5 mx_.25">
+  <div style="line-height: 3em;" class="px_.75 py_.5 mx_.2">
     <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="https://itunes.apple.com/us/podcast/bird-call-review/id1084057771?mt=2">iTunes</a>
     <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="overcast://x-callback-url/add?url=birdcallreview.com/feed.xml">Overcast</a>
     <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="downcast://birdcallreview.com/feed.xml">Downcast</a>
