Added podcast description

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,9 @@
 
   <h1 class="ff-normal site-title">Bird Call <span class="c-grey">Review</span></h1>
 
-  <img src="/img/birds.png" alt="Birds on Branch" style="width: 400px" class="mt-2" />
+  <p class="site-desc mt-1 c-grey fs-i">Bird calls are incredibly diverse. But are they all good? Are some just okay? Can a bird call be sexy? Let's&nbsp;find&nbsp;out.</p>
+
+  <img src="/img/birds.png" alt="Birds on Branch" style="width: 400px">
 
   <div style="line-height: 3em;" class="px_.75 py_.5 mx_.2">
     <a class="c-darkgrey bc-lightgrey bs-s bw-1p bs-3p" href="https://itunes.apple.com/us/podcast/bird-call-review/id1084057771?mt=2">iTunes</a>
