--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -303,6 +303,7 @@ html {
 .mb-2 { margin-bottom: 2em }
 .mt-1 { margin-top: 1em }
 .mt-2 { margin-top: 2em }
+.mr-1 { margin-right: 1em }
 .p-1 { padding: 1em }
 .pt-3 { padding-top: 3em }
 .bbw-1p { border-bottom-width: 1px }
